// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit draft:  Should load a draft correctly 1`] = `
Object {
  "bccEmails": Array [
    Object {
      "complete": "<usuario3@criptext.com>",
      "email": "usuario3@criptext.com",
      "form": "tag-app-domain",
      "name": undefined,
    },
  ],
  "ccEmails": Array [
    Object {
      "complete": "<usuario2@criptext.com>",
      "email": "usuario2@criptext.com",
      "form": "tag-app-domain",
      "name": undefined,
    },
  ],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "complete": "<usuario1@criptext.com>",
      "email": "usuario1@criptext.com",
      "form": "tag-app-domain",
      "name": undefined,
    },
  ],
}
`;

exports[`Form outgoing email:  Should form outgoing email from data 1`] = `
Object {
  "bodyWithSign": "<p>Hello</p>",
  "emailData": Object {
    "body": "<p>Hello</p>",
    "email": Object {
      "content": "",
      "date": 1524861748481,
      "fromAddress": "myAccountName <myAccountRecipientId@criptext.com>",
      "key": 1524861748481,
      "preview": "Hello",
      "secure": true,
      "status": 4,
      "subject": "Subject",
      "threadId": undefined,
      "unread": false,
    },
    "files": Array [],
    "labels": Array [
      6,
    ],
    "recipients": Object {
      "bcc": Array [
        "bccUser@criptext.com",
      ],
      "cc": Array [
        "ccUser@criptext.com",
      ],
      "from": Array [
        "myAccountRecipientId@criptext.com",
      ],
      "to": Array [
        "toUser@criptext.com",
      ],
    },
  },
  "recipientDomains": Array [
    Object {
      "domain": "criptext.com",
      "recipientId": "toUser",
      "type": "to",
      "username": "toUser",
    },
    Object {
      "domain": "criptext.com",
      "recipientId": "ccUser",
      "type": "cc",
      "username": "ccUser",
    },
    Object {
      "domain": "criptext.com",
      "recipientId": "bccUser",
      "type": "bcc",
      "username": "bccUser",
    },
  ],
}
`;

exports[`Reply, Reply-all, Forward:  Should load an email to forward 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 1,
  "textSubject": "FW: Email subject 1",
  "threadId": "1",
  "toEmails": Array [],
}
`;

exports[`Reply, Reply-all, Forward:  Should load an email to forward: Load attachments 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [
    Object {
      "fileData": Object {
        "date": "2018-11-23 17:24:36",
        "emailId": 2,
        "ephemeral": 0,
        "ephemeralStart": 0,
        "ephemeralTime": 0,
        "id": 1,
        "iv": "cmwgnoveirgkddfg==",
        "key": "jocmpqwrwgonedbsfsq==",
        "mimeType": "image/png",
        "name": "Criptext_file_1.png",
        "readOnly": 0,
        "size": 149836,
        "status": 1,
        "token": "tokenFile1",
        "type": "image/png",
      },
      "iv": "cmwgnoveirgkddfg==",
      "key": "jocmpqwrwgonedbsfsq==",
      "mode": "uploaded",
      "percentage": 100,
      "shouldDuplicate": true,
      "token": "tokenFile1",
    },
  ],
  "htmlBody": "<p>Modified body content</p>",
  "status": 1,
  "textSubject": "FW: Email subject 2",
  "threadId": "2",
  "toEmails": Array [],
}
`;

exports[`Reply, Reply-all, Forward:  Should load an email to reply 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 2,
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "complete": "From1 <from1@criptext.com>",
      "email": "from1@criptext.com",
      "form": "tag-app-domain",
      "name": "From1",
    },
  ],
}
`;

exports[`Reply, Reply-all, Forward:  Should load an email to reply to all 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [
    Object {
      "complete": "<usuario2@criptext.com>",
      "email": "usuario2@criptext.com",
      "form": "tag-app-domain",
      "name": undefined,
    },
  ],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 2,
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "complete": "From1 <from1@criptext.com>",
      "email": "from1@criptext.com",
      "form": "tag-app-domain",
      "name": "From1",
    },
    Object {
      "complete": "<usuario1@criptext.com>",
      "email": "usuario1@criptext.com",
      "form": "tag-app-domain",
      "name": undefined,
    },
  ],
}
`;
